carousel design updated

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,7 @@
   <!-- fonts import -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Play:wght@400;700&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Carlito:ital,wght@0,400;0,700;1,400;1,700&family=Livvic:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap" rel="stylesheet">
 
   <!-- aos stylesheet  -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -21,7 +20,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 
-<body class="play-regular">
+<body>
 
 
   <div class="loader">
@@ -81,40 +80,40 @@
     <section id="industries">
 
       <div class="carousel-container">
-        <h3>Industries we Serve</h3>
+        <h3>Industries We Serve</h3>
         <!-- Top Slide Selector (Thumbnails) -->
         <div class="swiper thumb-slider">
           <div class="swiper-wrapper swiper-thumb">
             <div class="swiper-slide">
-              <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/1000_F_96235368_pMReaIA5tenpmep8IgxCrQ185quNhFGM-transformed.png?alt=media&token=65722805-c3bf-4738-87aa-e9630463c4f7" alt="Boiler Manufacturing">
+              <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/THUMB%20IMAGES%2FBOILER%20THUMB%20IMAGE.png?alt=media&token=0982a420-e4c6-494b-bea7-09e7b70416d2" alt="Boiler Manufacturing">
               <h5>Boiler Manufacturing</h5>
             </div>
             <div class="swiper-slide">
-              <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/teleco%20towers.png?alt=media&token=c2e622b3-bc98-4e17-98c4-d62b3bb00354" alt="Telecom / Transmisson Towers">
-              <h5>Telecom / Transmisson Towers</h5>
+              <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/THUMB%20IMAGES%2FTELECO%20THUMB%20IMAGE.png?alt=media&token=bd323b77-fee4-43cc-921c-3e77518f9f0f" alt="Telecom / Transmisson Towers">
+              <h5>Transmisson Towers</h5>
             </div>
             <div class="swiper-slide">
-              <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/Precast-Concrete-Cap-Beam-1.jpg?alt=media&token=291877bd-7ebf-4650-8c09-c3fc24438b0e" alt="Precast Concrete Structures">
+              <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/THUMB%20IMAGES%2FPRECAST%20THUMB%20IMAGE.png?alt=media&token=62e937b2-806c-4f0c-8424-2742d70c8497" alt="Precast Concrete Structures">
               <h5>Precast Concrete Structures</h5>
             </div>
             <div class="swiper-slide">
-              <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/chimney-laid-out.png?alt=media&token=3f4d1fe8-dba2-4dd8-a69c-75ac9090e70b" alt="Chimney Manufacturing">
+              <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/THUMB%20IMAGES%2FCHIMNEY%20THUMB%20IMAGE.png?alt=media&token=93da23a7-1c5e-4102-ba3c-ff4a917f6983" alt="Chimney Manufacturing">
               <h5>Chimney Manufacturing</h5>
             </div>
             <div class="swiper-slide">
-              <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/resize.webp?alt=media&token=07ff99ca-c579-4310-bf72-8b31d9df1071" alt="Under Water Construction">
+              <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/THUMB%20IMAGES%2FUNDERWATER%20THUMB%20IMAGE.png?alt=media&token=e4a3f291-fa57-4d0a-a48c-08adfd224a52" alt="Under Water Construction">
               <h5>Under Water Construction</h5>
             </div>
             <div class="swiper-slide">
-              <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/industrial-shed.png?alt=media&token=0cd5131b-248d-4308-a97f-37f29d5b20c1" alt="Construction">
+              <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/THUMB%20IMAGES%2FSHED%20THUMB%20IMAGE.png?alt=media&token=3a82420e-2a18-4097-b0ae-c69c4a8e80b8" alt="Construction">
               <h5>Industrial Shed Construction</h5>
             </div>
             <div class="swiper-slide">
-              <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/National-Windmill-Day-min.jpg.webp?alt=media&token=f384d125-83f2-43d2-b8d0-f88b341581e3" alt="Windmills">
-              <h5>Windmills</h5>
+              <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/THUMB%20IMAGES%2FWINDMILL%20THUMB%20IMAGE.png?alt=media&token=05264c5b-25e1-4260-90c8-cfa3aa72363e" alt="Windmills Manufacturing">
+              <h5>Windmills Manufacturing</h5>
             </div>
             <div class="swiper-slide">
-              <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/can-industrial-fans-and-welding-mix--0.jpg?alt=media&token=fbabf0ee-7461-49b7-be18-dadfa78aa82c" alt="Industrial Fans Manufacturing">
+              <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/THUMB%20IMAGES%2FFANS%20THUMB%20IMAGE.png?alt=media&token=784f5d28-8d1a-4803-8ef7-9ae44dd96f51" alt="Industrial Fans Manufacturing">
               <h5>Industrial Fans Manufacturing</h5>
             </div>
           </div>
@@ -280,8 +279,8 @@
                 <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/windmill%20manufacturing.jpg?alt=media&token=36a0e8d9-a9ff-440e-9cc7-eccf6a8a1440" alt="Selected Image 7">
               </div>
               <div class="slide-content">
-                <h2>Windmills</h2>
-                <p>Windmills description goes here. This is a placeholder description for Under Water Construction.</p>
+                <h2>Windmills Manufacturing</h2>
+                <p>Windmills Manufacturing description goes here. This is a placeholder description for Under Water Construction.</p>
                 <div class="slide-content-flex-img">
                   <div class="slide_prod_img"><img src="https://placehold.co/100" alt="">
                     <p>Prod Name</p>
@@ -334,10 +333,10 @@
 
     </section>
     <section id="about">
-      <img data-aos="fade-down" data-aos-offset="700" data-aos-duration="1500" src="https://placehold.co/600x400"
+      <img data-aos="fade-down" data-aos-delay="1300" data-aos-duration="1500" src="https://placehold.co/600x400"
         alt="">
 
-      <div data-aos="fade-up" data-aos-offset="700" data-aos-duration="1500" class="text">
+      <div data-aos="fade-up" data-aos-delay="1300" data-aos-duration="1500" class="text">
         <h3>About SF Hardwares & Suppliers</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos similique quod voluptatibus commodi veritatis.
           Expedita deleniti quasi maiores iste animi ut. Ipsam assumenda voluptates sequi magnam obcaecati accusantium
@@ -418,5 +417,5 @@ Hot Deep Fasteners -->
 4) Chimney Manufacturing
 5) Construction
 6) Under Water Construction
-7) Windmills
+7) Windmills Manufacturing
 8) Industrial Fans -->
