--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
   </div>
 
   <div id="content">
+    <header><div> <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/static%20icons%2Femail%20(2).png?alt=media&token=8c682a8d-e011-4da3-a365-78ed207e4b6d" alt=""> <a href="mailto:sfhardwaresuppliers@gmail.com">sfhardwaresuppliers@gmail.com</a> <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/static%20icons%2Fwhatsapp%20(1).png?alt=media&token=46b08984-e6d0-4535-93a9-393444cb3df3" alt=""> <a href="https://wa.me/919003072883">+91 90030 72883</a></div> <h1>Supplier of High Quality Fastener Products in Chennai</h1></header>
     <nav>
       <img src="media/sf logopng.png" alt="sf-hardware-logo">
 
@@ -47,7 +48,41 @@
     </nav>
 
     <section id="hero">
-      <h1 data-aos="fade-down" data-aos-offset="100">Welcome to S.F HARDWARES & SUPPLIERS</h1>
+      <div class="my-swiper-container">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/hero%20images%2FHero%20Img%202.png?alt=media&token=7bf647e4-e5ad-4f5d-9a0a-8d9f0652262b" alt="">
+            <div class="hero_text_content hero_one">
+              <h4>SF Hardwares & Suppliers</h4>
+              <h5>Trusted Supplier for all your Fastener needs.</h5>
+              <!-- <div class="hero_one_images">
+                <img class="small_hero" src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/hero%20static%20images%2F110300252210_001.webp?alt=media&token=a910ebc3-eaea-4eb5-abe5-9372a0345f2c" alt="">
+                <img class="small_hero" src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/hero%20static%20images%2F5fa93e3874755foundation.jpg?alt=media&token=31cf47b2-b713-4159-b526-4113213841be" alt="">
+                <img class="small_hero" src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/hero%20static%20images%2F61qU%2Bhyv8IL._AC_UF1000%2C1000_QL80_.jpg?alt=media&token=72e3161f-1a5f-4d37-906a-384aa9f04947" alt="">
+                <img class="small_hero" src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/hero%20static%20images%2Fflange-washers-2217339227-rbr6nn6y.webp?alt=media&token=097669d5-b70e-447d-b7e0-c671beb8e592" alt="">
+                <img class="small_hero" src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/hero%20static%20images%2Fhill-side-washer-500x500.webp?alt=media&token=ac398953-8a52-4f09-9dab-403e2d823539" alt="">
+                <img class="small_hero" src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/hero%20static%20images%2Fhot-dip-foundation-bolt-500x500.webp?alt=media&token=b2e238a9-3453-4b69-94ea-b7961e6bbd07" alt="">
+                <img class="small_hero" src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/hero%20static%20images%2Fimg-hot-dip-galvanized-fastener.jpg?alt=media&token=7d6af952-93f2-4e02-999e-7cb3eba88c37" alt="">
+                <img class="small_hero" src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/hero%20static%20images%2Fmetal-washers.jpg?alt=media&token=a1d31334-4be9-4582-bc32-7713cd41855b" alt="">
+                <img class="small_hero" src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/hero%20static%20images%2Fu-bolts-300x300.jpg?alt=media&token=132187b9-129a-4135-a349-105ef07ed830" alt="">
+              </div> -->
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/hero%20images%2FHero%20Img%203.png?alt=media&token=32cb5b33-d701-4035-a580-945992e94d80" alt="">
+            <div class="hero_text_content">
+              <p>Page 2</p>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/hero%20images%2FHero%20Img%201.png?alt=media&token=3a9397d1-95e7-4e38-a2b1-ea388a5a4d6a" alt="">
+            <div class="hero_text_content">
+              <p>Page 3</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      
     </section>
     <section id="products">
 
@@ -73,6 +108,10 @@
         <div class="product_card">
           <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/product%20images%2FHot%20Deep%20Fasteners.png?alt=media&token=05434a65-7e3d-4f45-a652-24317ef06681">
           <h5>Hot Deep Fasteners</h5>
+        </div>
+        <div class="product_card">
+          <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/product%20images%2FFoundation%20Bols.png?alt=media&token=0019ccf2-3a58-4f53-99fd-424cda5dd836">
+          <h5>Foundation Bolts</h5>
         </div>
       </container>
 
@@ -115,6 +154,10 @@
             <div class="swiper-slide">
               <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/THUMB%20IMAGES%2FFANS%20THUMB%20IMAGE.png?alt=media&token=784f5d28-8d1a-4803-8ef7-9ae44dd96f51" alt="Industrial Fans Manufacturing">
               <h5>Industrial Fans Manufacturing</h5>
+            </div>
+            <div class="swiper-slide">
+              <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/THUMB%20IMAGES%2FBRIDGES%20THUMB%20IMAGE.png?alt=media&token=c0b987ba-9873-4b0b-aa94-0746627ece5e" alt="Bridge Manufacturing">
+              <h5>Bidge Manufacturing</h5>
             </div>
           </div>
         </div>
@@ -323,6 +366,31 @@
               </div>
             </div>
 
+          <!-- Slide 8 -->
+          <div class="swiper-slide">
+            <div class="slide-image">
+              <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/slider%20main%20images%2FBRIDGE%20MAIN.webp?alt=media&token=9ee24bc4-f64d-4802-8494-b2c30c9f7ec9" alt="Selected Image 8">
+            </div>
+            <div class="slide-content">
+              <h2>Bridges Manufacturing</h2>
+              <p>Bridges Manufacturing description goes here. This is a placeholder description for Bridges Manufacturing</p>
+              <div class="slide-content-flex-img">
+                <div class="slide_prod_img"><img src="https://placehold.co/100" alt="">
+                  <p>Prod Name</p>
+                </div>
+                <div class="slide_prod_img"><img src="https://placehold.co/100" alt="">
+                  <p>Prod Name</p>
+                </div>
+                <div class="slide_prod_img"><img src="https://placehold.co/100" alt="">
+                  <p>Prod Name</p>
+                </div>
+                <div class="slide_prod_img"><img src="https://placehold.co/100" alt="">
+                  <p>Prod Name</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
           </div>
 
         </div>
@@ -337,39 +405,76 @@
       <h1> <span>For all your Fastener needs and more,</span> there is SF Hardwares and Suppliers</h1>
     </section>
     <section id="contact">
-      <h5>Get in Touch</h5>
+      
       <div>
+        <h5>Get in Touch</h5>
         <h4>MUSTAFA</h4>
         <p>Proprietor</p>
-        <p>S.F. HARDWARES & SUPPLIERS</p>
-        <br>
-        <p>Dealers & Stockists Of: M.S. G.I. Bolt Nuts, Fasteners, S.S. Fasteners, High Tensiless, 10.9. Fasteners Hot
-          Peep Bolt Fasteners, General Order Supplier</p>
-          <br>
-        <p> <a href="https://wa.me/919003072883">+91 90030 72883</a> / <a href="https://wa.me/918925113072">+91 89251 13072</a></p>
-        <p> <a href="mailto:sfhardwaresuppliers@gmail.com">sfhardwaresuppliers@gmail.com</a>  / <a href="mailto:mohdtraders786@gmail.com">mohdtraders786@gmail.com</a> </p>
-        <p> <a href="https://maps.app.goo.gl/5KziV1DE5hSXSs6U7"> No. 28/53, Venkata Maistry Street, Mannady, Chennai - 600 001</a></p>
+        <p class="sf-cont-bottom">S.F. HARDWARES & SUPPLIERS</p>
+        <p> <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/static%20icons%2Fwhatsapp%20(1).png?alt=media&token=46b08984-e6d0-4535-93a9-393444cb3df3" alt=""> <a href="https://wa.me/919003072883">+91 90030 72883</a> / <a href="https://wa.me/918925113072">+91 89251 13072</a></p>
+        <p> <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/static%20icons%2Femail%20(2).png?alt=media&token=8c682a8d-e011-4da3-a365-78ed207e4b6d" alt=""> <a href="mailto:sfhardwaresuppliers@gmail.com">sfhardwaresuppliers@gmail.com</a>  / <a href="mailto:mohdtraders786@gmail.com">mohdtraders786@gmail.com</a> </p>
+        <p> <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/static%20icons%2Fpin.png?alt=media&token=0ea6a158-6cb0-4659-8c52-87e60fa9aa4e" alt=""> <a href="https://maps.app.goo.gl/5KziV1DE5hSXSs6U7"> No. 28/53, Venkata Maistry Street, Mannady, Chennai - 600 001</a></p>
+      </div>
 
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3886.0604348583456!2d80.28746699999999!3d13.095356400000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a526f5ab696ab65%3A0x91e7a534eabcd74f!2s60%2F28%2C%20Venkata%20Maistry%20St%2C%20Mannadi%2C%20George%20Town%2C%20Chennai%2C%20Tamil%20Nadu%20600001!5e0!3m2!1sen!2sin!4v1725962076993!5m2!1sen!2sin"
-          width="95%" height="350px" style="border:0;" allowfullscreen="" loading="lazy"
+          width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"></iframe>
-
-
-      </div>
     </section>
-    <footer></footer>
+    <footer>
+      <div id='logoDiv'>
+        <img src="media/sf logopng.png" alt="sf-hardware-logo">
+        <p>
+          SF Hardwares & Suppliers is a leading Dealer & Stockist Of M.S. G.I. Bolt Nuts, Fasteners, S.S. Fasteners, High Tensiless, 10.9. Fasteners Hot Peep Bolt Fasteners and General Order Supplier based in Chennai, Tamil Nadu. 
+          <br> <br>
+          We serve a wide variety of industries, inclusive of Boiler Manufacturing Industries, Telecom Towers / Electricity Transmission Towers construction and fabrication Industries, Precast Concrete Structures (Bridges etc) fabrication and construction Industries, Chimney Manufacturing Industries, Construction Industries, Under Water Construction Industries, Windmill Manufacturing Industries and Industrial Fans Manufacturing Industries
+        </p>
+      </div>
+      <div>
+        <h4>Our Products</h4>
+        <ul>
+          <li>MS & GI Bolts and Nuts</li>
+          <li>Fasteners</li>
+          <li>SS Fasteners</li>
+          <li>High Tensile Fasteners</li>
+          <li>Hot Deep Fasteners</li>
+          <li>Foundation Bolts</li>
+        </ul>
+      </div>
+      <div>
+        <h4>Industries We Serve</h4>
+        <ul>
+          <li>Boiler Manufacturing</li>
+          <li>Telecom Towers / Electricity Transmission Towers</li>
+          <li>Precast Concrete Structures</li>
+          <li>Chimney Manufacturing</li>
+          <li>Construction</li>
+          <li>Under Water Construction</li>
+          <li>Windmills Manufacturing</li>
+          <li>Industrial Fans</li>
+        </ul>
+      </div>
+      <div>
+        <h4>Get In Touch</h4>
+        <p> <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/static%20icons%2Fwhatsapp%20(1).png?alt=media&token=46b08984-e6d0-4535-93a9-393444cb3df3" alt=""> <a href="https://wa.me/919003072883">+91 90030 72883</a> / <a href="https://wa.me/918925113072">+91 89251 13072</a></p>
+        <p> <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/static%20icons%2Femail%20(2).png?alt=media&token=8c682a8d-e011-4da3-a365-78ed207e4b6d" alt=""> <a href="mailto:sfhardwaresuppliers@gmail.com">sfhardwaresuppliers@gmail.com</a>  / <a href="mailto:mohdtraders786@gmail.com">mohdtraders786@gmail.com</a> </p>
+        <p> <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/static%20icons%2Fpin.png?alt=media&token=0ea6a158-6cb0-4659-8c52-87e60fa9aa4e" alt=""> <a href="https://maps.app.goo.gl/5KziV1DE5hSXSs6U7"> No. 28/53, Venkata Maistry Street, Mannady, Chennai - 600 001</a></p>
+      </div>
+    </footer>
+    <div id="Copyright"><p>Copyright @ <span id="year"></span> SF Hardwares & Suppliers | All Rights Reserved</p></div>
 
   </div>
-
-
-
 
 </body>
 
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 <script src="script.js"></script>
+<script>
+  const d = new Date();
+  let year = d.getFullYear();
+  document.getElementById("year").innerHTML = year;
+  </script>
 
 </html>
 
