final hero done

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,12 @@
   <!-- Swiper CSS -->
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 
+  <!-- favicon  -->
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/site.webmanifest">
+
   <title>SF Hardwares & Suppliers | M.S. G.I. Bolt Nuts, Fasteners, S.S. Fasteners, High Tensiless, 10.9. Fasteners Hot
     Peep Bolt Fasteners, General Order Supplier </title>
   <link rel="stylesheet" href="styles.css">
@@ -37,7 +43,7 @@
   <div id="content">
     <header><div> <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/static%20icons%2Femail%20(2).png?alt=media&token=8c682a8d-e011-4da3-a365-78ed207e4b6d" alt=""> <a href="mailto:sfhardwaresuppliers@gmail.com">sfhardwaresuppliers@gmail.com</a> <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/static%20icons%2Fwhatsapp%20(1).png?alt=media&token=46b08984-e6d0-4535-93a9-393444cb3df3" alt=""> <a href="https://wa.me/919003072883">+91 90030 72883</a></div> <h1>Supplier of High Quality Fastener Products in Chennai</h1></header>
     <nav>
-      <img src="media/sf logopng.png" alt="sf-hardware-logo">
+      <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/SF%20Logo%20Final.png?alt=media&token=6f5ed33e-9613-4dac-8380-0311e6b167b6" alt="sf-hardware-logo">
 
       <ul class="options">
         <li> <a href="#products">Products</a></li>
@@ -51,33 +57,46 @@
       <div class="my-swiper-container">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/hero%20images%2FHero%20Img%202.png?alt=media&token=7bf647e4-e5ad-4f5d-9a0a-8d9f0652262b" alt="">
+            <video src="temp media/construction 2.mp4" autoplay loop muted></video>
             <div class="hero_text_content hero_one">
-              <h4>SF Hardwares & Suppliers</h4>
-              <h5>Trusted Supplier for all your Fastener needs.</h5>
-              <!-- <div class="hero_one_images">
-                <img class="small_hero" src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/hero%20static%20images%2F110300252210_001.webp?alt=media&token=a910ebc3-eaea-4eb5-abe5-9372a0345f2c" alt="">
-                <img class="small_hero" src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/hero%20static%20images%2F5fa93e3874755foundation.jpg?alt=media&token=31cf47b2-b713-4159-b526-4113213841be" alt="">
-                <img class="small_hero" src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/hero%20static%20images%2F61qU%2Bhyv8IL._AC_UF1000%2C1000_QL80_.jpg?alt=media&token=72e3161f-1a5f-4d37-906a-384aa9f04947" alt="">
-                <img class="small_hero" src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/hero%20static%20images%2Fflange-washers-2217339227-rbr6nn6y.webp?alt=media&token=097669d5-b70e-447d-b7e0-c671beb8e592" alt="">
-                <img class="small_hero" src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/hero%20static%20images%2Fhill-side-washer-500x500.webp?alt=media&token=ac398953-8a52-4f09-9dab-403e2d823539" alt="">
-                <img class="small_hero" src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/hero%20static%20images%2Fhot-dip-foundation-bolt-500x500.webp?alt=media&token=b2e238a9-3453-4b69-94ea-b7961e6bbd07" alt="">
-                <img class="small_hero" src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/hero%20static%20images%2Fimg-hot-dip-galvanized-fastener.jpg?alt=media&token=7d6af952-93f2-4e02-999e-7cb3eba88c37" alt="">
-                <img class="small_hero" src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/hero%20static%20images%2Fmetal-washers.jpg?alt=media&token=a1d31334-4be9-4582-bc32-7713cd41855b" alt="">
-                <img class="small_hero" src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/hero%20static%20images%2Fu-bolts-300x300.jpg?alt=media&token=132187b9-129a-4135-a349-105ef07ed830" alt="">
-              </div> -->
+              <div id="heroSquareOne">
+                <img data-aos="slide-right" src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/hero%20elements%2Fhero%20square%201.png?alt=media&token=f139bdef-81fa-453d-ac22-435341d4356d" alt="">
+                <div id="heroTextOne">
+                  <h2 data-aos="slide-right" data-aos-delay="450"> <span>SF</span> Hardwares & Suppliers</h2>
+                  <h4 data-aos="slide-right" data-aos-delay="900">Reliable Fasteners for Every Project</h4>
+                  <p data-aos="zoom-in" data-aos-delay="1350">From industrial bolts to precision screws, we provide top-quality fasteners that keep your projects secure and on track. Shop now for unbeatable durability and performance.</p>
+                  <a href="#industries"><button data-aos="zoom-in" data-aos-delay="1350">Shop Now</button></a>
+                </div>
+              </div>
+              <div id="heroSquareTwo">
+                <img data-aos="slide-left" src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/hero%20elements%2Fhero%20left.png?alt=media&token=d5fb9a7e-1c50-4b2b-8c37-fcd6715ea148" alt="">
+              </div>
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/hero%20images%2FHero%20Img%203.png?alt=media&token=32cb5b33-d701-4035-a580-945992e94d80" alt="">
+            <video src="temp media/factory shed.mp4" autoplay loop muted></video>
             <div class="hero_text_content">
-              <p>Page 2</p>
+              <div class="heroTwoBack">
+                <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/hero%20elements%2Fhero%202%20rectangle.png?alt=media&token=08021e37-bbe8-4acc-a7b3-f395b2c544ef" alt="">
+                <div class="heroTwoText">
+                  <h4>Strength You Can Count On</h4>
+                  <p>Engineered for excellence, the bolts and fasteners we supply are of the highest quality. Whether for construction or manufacturing, trust our range to hold it all together with confidence.</p>
+                  <a href="#industries"><button>Browse Our Products</button></a>
+                </div>
+              </div>
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/hero%20images%2FHero%20Img%201.png?alt=media&token=3a9397d1-95e7-4e38-a2b1-ea388a5a4d6a" alt="">
+            <video src="temp media/windmill 2.mp4" autoplay loop muted></video>
             <div class="hero_text_content">
-              <p>Page 3</p>
+              <div class="heroTwoBack">
+                <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/hero%20elements%2Fhero%202%20rectangle.png?alt=media&token=08021e37-bbe8-4acc-a7b3-f395b2c544ef" alt="">
+                <div class="heroTwoText">
+                  <h4>Fasteners that Build Your Vision</h4>
+                  <p>From small fixes to large-scale construction, our bolts and fasteners deliver precision, reliability, and strength. Find the perfect fit for every job, big or small.</p>
+                  <a href="#industries"><button>Find Your Fastener</button></a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -119,7 +138,7 @@
     <section id="industries">
 
       <div class="carousel-container">
-        <h3>Industries We Serve</h3>
+        <h3>Fasteners for Every Industry</h3>
         <!-- Top Slide Selector (Thumbnails) -->
         <div class="swiper thumb-slider">
           <div class="swiper-wrapper swiper-thumb">
@@ -407,7 +426,7 @@
     <section id="contact">
       
       <div>
-        <h5>Get in Touch</h5>
+        <h5>Need the Right Fasteners? <br> <span>Get in touch</span></h5>
         <h4>MUSTAFA</h4>
         <p>Proprietor</p>
         <p class="sf-cont-bottom">S.F. HARDWARES & SUPPLIERS</p>
@@ -423,7 +442,7 @@
     </section>
     <footer>
       <div id='logoDiv'>
-        <img src="media/sf logopng.png" alt="sf-hardware-logo">
+        <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/SF%20Logo%20Final.png?alt=media&token=6f5ed33e-9613-4dac-8380-0311e6b167b6" alt="sf-hardware-logo">
         <p>
           SF Hardwares & Suppliers is a leading Dealer & Stockist Of M.S. G.I. Bolt Nuts, Fasteners, S.S. Fasteners, High Tensiless, 10.9. Fasteners Hot Peep Bolt Fasteners and General Order Supplier based in Chennai, Tamil Nadu. 
           <br> <br>
