last minute changes to about section

--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,11 @@
   <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
   <link rel="manifest" href="favicon/site.webmanifest">
 
-  <title>SF Hardwares & Suppliers | M.S. G.I. Bolt Nuts, Fasteners, S.S. Fasteners, High Tensiless, 10.9. Fasteners Hot
-    Peep Bolt Fasteners, General Order Supplier </title>
+  <title>SF Hardwares & Suppliers | M.S. G.I. Bolt Nuts, Fasteners, S.S. Fasteners, High Tensiless, 10.9. Fasteners Hot Peep Bolt Fasteners, General Order Supplier</title>
+
+  <meta property="og:title" content="SF Hardwares & Suppliers | M.S. G.I. Bolt Nuts, Fasteners, S.S. Fasteners, High Tensiless, 10.9. Fasteners Hot Peep Bolt Fasteners, General Order Supplier" />
+  <meta property="og:type" content="company website" />
+  <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/SF%20Logo%20Final.png?alt=media&token=6f5ed33e-9613-4dac-8380-0311e6b167b6" />
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -420,8 +423,18 @@
       </div>
 
     </section>
-    <section id="quote">
-      <h1> <span>For all your Fastener needs and more,</span> there is SF Hardwares and Suppliers</h1>
+    <section id="about">
+
+      <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/SF%20Logo%20Final.png?alt=media&token=6f5ed33e-9613-4dac-8380-0311e6b167b6" alt="">
+      
+      <div>
+      <h1><span>For all your Fastener needs and more,</span> there is SF Hardwares and Suppliers</h1>
+      <p>
+        SF Hardwares & Suppliers is a leading Dealer & Stockist Of M.S. G.I. Bolt Nuts, Fasteners, S.S. Fasteners, High Tensiless, 10.9. Fasteners Hot Peep Bolt Fasteners and General Order Supplier based in Chennai, Tamil Nadu. 
+        <br> <br>
+        We serve a wide variety of industries, inclusive of Boiler Manufacturing Industries, Telecom Towers / Electricity Transmission Towers construction and fabrication Industries, Precast Concrete Structures (Bridges etc) fabrication and construction Industries, Chimney Manufacturing Industries, Construction Industries, Under Water Construction Industries, Windmill Manufacturing Industries and Industrial Fans Manufacturing Industries
+      </p>
+      </div>
     </section>
     <section id="contact">
       
