--- a/public/index.html
+++ b/public/index.html
@@ -44,10 +44,16 @@
   </div>
 
   <div id="content">
-    <header><div> <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/static%20icons%2Femail%20(2).png?alt=media&token=8c682a8d-e011-4da3-a365-78ed207e4b6d" alt=""> <a href="mailto:sfhardwaresuppliers@gmail.com">sfhardwaresuppliers@gmail.com</a> <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/static%20icons%2Fwhatsapp%20(1).png?alt=media&token=46b08984-e6d0-4535-93a9-393444cb3df3" alt=""> <a href="https://wa.me/919003072883">+91 90030 72883</a></div> <h1>Supplier of High Quality Fastener Products in Chennai</h1></header>
-    <nav>
+    <header><div data-aos="fade-down"> <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/static%20icons%2Femail%20(2).png?alt=media&token=8c682a8d-e011-4da3-a365-78ed207e4b6d" alt=""> <a href="mailto:sfhardwaresuppliers@gmail.com">sfhardwaresuppliers@gmail.com</a> <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/static%20icons%2Fwhatsapp%20(1).png?alt=media&token=46b08984-e6d0-4535-93a9-393444cb3df3" alt=""> <a href="https://wa.me/919003072883">+91 90030 72883</a></div> <h1 data-aos="fade-down">Supplier of High Quality Fastener Products in Chennai</h1></header>
+    <nav data-aos="fade-down">
       <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/SF%20Logo%20Final.png?alt=media&token=6f5ed33e-9613-4dac-8380-0311e6b167b6" alt="sf-hardware-logo">
 
+    <label class="burger" for="burger">
+      <input type="checkbox" id="burger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </label>
       <ul class="options">
         <li> <a href="#products">Products</a></li>
         <li><a href="#industries">industries</a></li>
@@ -111,34 +117,34 @@
       <h3>Our Products</h3>
 
       <container class="products_container">
-        <div class="product_card">
+        <div class="product_card" data-aos="flip-left">
           <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/product%20images%2FMS%20%26%20GI%20Bolts%20and%20Nuts.png?alt=media&token=267a196f-a90a-4b0c-b242-8b54b29f8cc2">
           <h5>MS & GI Bolts and Nuts</h5>
         </div>
-        <div class="product_card">
+        <div class="product_card" data-aos="flip-left">
           <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/product%20images%2FFasteners.png?alt=media&token=9ef43679-16f9-4193-8731-7013bcfaf75d">
           <h5>Fasteners</h5>
         </div>
-        <div class="product_card">
+        <div class="product_card" data-aos="flip-left">
           <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/product%20images%2FSS%20Fasteners.png?alt=media&token=c2675252-6701-4b45-920b-02a4c029f1a3">
           <h5>SS Fasteners</h5>
         </div>
-        <div class="product_card">
+        <div class="product_card" data-aos="flip-left">
           <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/product%20images%2FHigh%20Tensile%20Fasteners.png?alt=media&token=088a9d0a-5cbf-42d7-852a-3c377dbd74a8">
           <h5>High Tensile Fasteners</h5>
         </div>
-        <div class="product_card">
+        <div class="product_card" data-aos="flip-left">
           <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/product%20images%2FHot%20Deep%20Fasteners.png?alt=media&token=05434a65-7e3d-4f45-a652-24317ef06681">
           <h5>Hot Deep Fasteners</h5>
         </div>
-        <div class="product_card">
+        <div class="product_card" data-aos="flip-left">
           <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/product%20images%2FFoundation%20Bols.png?alt=media&token=0019ccf2-3a58-4f53-99fd-424cda5dd836">
           <h5>Foundation Bolts</h5>
         </div>
       </container>
 
     </section>
-    <section id="industries">
+    <section id="industries" data-aos="fade-up" data-aos-duration="1000">
 
       <div class="carousel-container">
         <h3>Fasteners for Every Industry</h3>
@@ -425,9 +431,9 @@
     </section>
     <section id="about">
 
-      <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/SF%20Logo%20Final.png?alt=media&token=6f5ed33e-9613-4dac-8380-0311e6b167b6" alt="">
+      <img data-aos="fade-up" src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/SF%20Logo%20Final.png?alt=media&token=6f5ed33e-9613-4dac-8380-0311e6b167b6" alt="">
       
-      <div>
+      <div data-aos="fade-down">
       <h1><span>For all your Fastener needs and more,</span> there is SF Hardwares and Suppliers</h1>
       <p>
         SF Hardwares & Suppliers is a leading Dealer & Stockist Of M.S. G.I. Bolt Nuts, Fasteners, S.S. Fasteners, High Tensiless, 10.9. Fasteners Hot Peep Bolt Fasteners and General Order Supplier based in Chennai, Tamil Nadu. 
@@ -436,7 +442,7 @@
       </p>
       </div>
     </section>
-    <section id="contact">
+    <section id="contact" data-aos="fade-up" data-aos-duration="1000">
       
       <div>
         <h5>Need the Right Fasteners? <br> <span>Get in touch</span></h5>
